opam-version: "2.0"
name: "plato"
version: "1.1.0"
synopsis: "Python Library Adapted To OCaml"
maintainer: "Marc Chevalier <github@marc.chevalier.com>"
authors: "Marc Chevalier <github@marc.chevalier.com>"
homepage: "https://github.com/marc-chevalier/plato"
bug-reports: "https://github.com/marc-chevalier/plato/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "re" {>= "1.9.0"}
  "stdcompat" {>= "13"}
  "cppo" {>= "1.6.6"}
  "ounit2" {with-test & >= "2.0.8"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
license: "MIT"
description: """
Python Library Adapted To Ocaml
"""

